--- a/AdvancedWidgetEase/Config/DefaultEngine.ini
+++ b/AdvancedWidgetEase/Config/DefaultEngine.ini
@@ -55,18 +55,6 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedEase.AdvancedEase
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Game/Blueprints/BPGameInstance.BPGameInstance_C
-GameDefaultMap=/Game/AdvancedEase.AdvancedEase
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Game/Blueprints/BPGameMode.BPGameMode_C
-GlobalDefaultServerGameMode=None
-
+EditorStartupMap=/Game/AdvancedWidgetEaseMap.AdvancedWidgetEaseMap
+GameDefaultMap=/Game/AdvancedWidgetEaseMap.AdvancedWidgetEaseMap
 
