--- a/AdvancedWidgetEase/Config/DefaultEngine.ini
+++ b/AdvancedWidgetEase/Config/DefaultEngine.ini
@@ -8,6 +8,12 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/DempMap.DempMap
+GameDefaultMap=/Game/DempMap.DempMap
+GlobalDefaultGameMode=/Game/AdvancedWidgetEase/Blueprints/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/AdvancedWidgetEase/Blueprints/BP_GameInstance.BP_GameInstance_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -54,7 +60,4 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AdvancedWidgetEaseMap.AdvancedWidgetEaseMap
-GameDefaultMap=/Game/AdvancedWidgetEaseMap.AdvancedWidgetEaseMap
 
